# mini-bert

./: LICENSE  README.md  mini-bert.ipynb  pyproject.toml  requirements.txt
